subiendo proyecto_amor

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 eres,</span
               ><br />
               <span class="say"
-                >tan grandiosa, que hasta tienes tu página web!! jejeje, Te
-                amo</span
+                >tan grandiosa, que hasta ahora tienes tu página web!! jejeje,
+                Te amo</span
               ><br />
               <span class="say"><span class="space"></span>- Agustín </span>
             </font>
@@ -96,7 +96,69 @@
         <canvas id="canvas" width="1100" height="680"></canvas>
       </div>
     </div>
-
+    <div class="cards-container">
+      <div class="card">
+        <img
+          src="./file/imgs/6E8453A8-AA9B-4F5E-9F9C-0E60B275536E.JPEG"
+          alt="Mi amor cocinando"
+        />
+        <p>Siempre me consientes, como puedas lo logras amor</p>
+      </div>
+      <div class="card">
+        <img
+          src="./file/imgs/865183F1-9BC2-4C7E-8A94-BE4D876948E6.JPEG"
+          alt="Nosotros nuevamente"
+        />
+        <p>Me encanta tenerte a mi lado mi amor</p>
+      </div>
+      <div class="card">
+        <img
+          src="./file/imgs/EBEFC11F-E615-42CE-A33A-DEF1A5237C0F.JPEG"
+          alt="Mi amor riendo"
+        />
+        <p>Nos divertimos y nos molestamos, pero siempre juntitos amor</p>
+      </div>
+      <div class="card">
+        <img
+          src="./file/imgs/12BFB37A-0476-4CB2-A04B-F901C8A0C773.JPEG"
+          alt="Nosotros nuevamente"
+        />
+        <p>
+          Por más experiencias juntos, acompañándonos y eligiéndonos día a día
+        </p>
+      </div>
+      <div class="card">
+        <img
+          src="./file/imgs/F167DA49-C603-4066-9B08-0F5B14BD3F13.JPEG"
+          alt="Nosotros"
+        />
+        <p>Cuando estás conmigo cualquier cosa me parece divertida</p>
+      </div>
+      <div class="card">
+        <img src="./file/imgs/IMG_1844.JPEG" alt="Nosotros nuevamente" />
+        <p>
+          Lo linda que te veías este día amor, con tu hermoso regalo que algún
+          día superaré
+        </p>
+      </div>
+      <div class="large-card">
+        <img src="./file/imgs/large.JPEG" alt="Nosotros nuevamente" />
+        <p>❤️ Simplemente te amo princesita y Feliz Cumpleaños ❤️</p>
+      </div>
+    </div>
+    <div class="message-paragraph-container">
+      <p>
+        Hoy celebro no solo tu vida amor, sino también la suerte que he tenido
+        al encontrar una mujer tan espectacular. Desde que has llegado a mi vida
+        me impulsas a superarme, ser mejor persona y reflexionar sobre muchas
+        cosas que no sabía que debía cambiar para mejorar. Sin duda alguna eres
+        una mujer única, de las que ya no hay, con un muy lindo corazón y una
+        dulce personalidad. Me encanta tu compañía amor, eres la mejor partner
+        que pude pedir, y me siento afortunado de tenerte. Admiro tu pasíón y tu
+        entrega a todo lo que haces, desde tus gustos musicales hasta la
+        vocación de profesora. !Por muchos más cumpleaños juntos amorsoteeee!!!!
+      </p>
+    </div>
     <script></script>
 
     <script>
